# lingmaflow

./: .gitignore  AGENTS.md  README.md  TASK_STATE.md  TASK_STATE.md.backup  cosmic-ray.toml  mytest.txt  pyproject.toml  repo-indexer.skill  review_report.json  session.sqlite  test_vec_debug.py
.continue/rules/: CONTINUE.md
.ipynb_checkpoints/: setup_lingmaflow-checkpoint.sh
.lingma/skills/repo-indexer/: test_hybrid_search.py
.lingmaflow/: active_change  current_task.md
continue/: CONTINUE.md
features/: test_passing.feature
features/steps/: __init__.py  steps.py
lingmaflow/: AGENTS.md
lingmaflow/cli/: lingmaflow.py
lingmaflow/core/: __init__.py  agents_injector.py  condition_checker.py  feature_lock.py  harness.py  runner.py  skill_registry.py  task_state.py
lingmaflow/docs/: bdd-integration.md
lingmaflow/skills/brainstorming/: SKILL.md
lingmaflow/skills/subagent-driven/: SKILL.md
lingmaflow/skills/systematic-debugging/: SKILL.md
lingmaflow/skills/test-driven-development/: SKILL.md
lingmaflow/skills/writing-plans/: SKILL.md
openspec/changes/lingmaflow-p0-improvements/: PROGRESS.md  tasks.json  tasks.md
openspec/changes/lingmaflow-p2-openspec-tracker/: proposal.md  tasks.md
openspec/changes/lingmaflow-phase1-skill-registry/: design.md  proposal.md  tasks.md
openspec/specs/readme-update/: spec.md
tests/: test_agents_injector.py  test_behave_condition.py  test_cli.py  test_condition_checker.py  test_feature_lock.py  test_harness.py  test_skill_registry.py  test_task_state.py
tests/fixtures/: test_failing.feature  test_passing.feature
(+107 files in other folders)
