[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingmaflow"
version = "0.3.0"
description = "Agentic development framework for Lingma IDE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
lingmaflow = "lingmaflow.cli.lingmaflow:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lingmaflow*"]
